package seedu.bigpp.ui;

public enum UIState {
    PCVIEWER, PCBUILDER
}
